--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="favicon/180.png">
     <link rel="manifest" href="favicon/manifest.webmanifest">
-    <!--<link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page__header header">
@@ -35,8 +35,8 @@
           </ul>
         </nav>
         <ul class="header__basket basket">
-          <li class="basket-item">
-            <a class="basket-link" href="#nowhere">Корзина</a>
+          <li class="basket__item">
+            <a class="basket__link" href="#nowhere">Корзина</a>
           </li>
         </ul>
       </div>
@@ -47,117 +47,121 @@
           <h1 class="page-title__title">Магазин готовых шаблонов</h1>
         </div>
       </div>
-      <section class="catalog">
+      <section class="page__wrapper catalog">
         <h2 class="visually-hidden">Фильтр шаблонов</h2>
-        <form class="catalog__form" method="get" action="https://echo.htmlacademy.ru">
-          <fieldset class="price">
-            <legend class="price-filter">Стоимость</legend>
-            <ul>
-              <li class="price-min">
-                <span class="price-min-element">от</span>
-                <input class="price-min-input" type="number" placeholder="0" min="0" step="100" name="min-price">
+        <form class="catalog__form form" method="get" action="https://echo.htmlacademy.ru">
+          <fieldset class="form__block">
+            <legend class="form__price price">Стоимость</legend>
+            <ul class="price__list">
+              <li class="price__item">
+                <label class="price__area">
+                  <span class="price__label">от</span>
+                  <input class="price__input" type="number" placeholder="0" min="0"  max="15000" step="100" name="min-price">
+                </label>
               </li>
-              <li class="price-max">
-                <span class="price-max-element">до</span>
-                <input class="price-max-input" type="number" placeholder="15 000" max="15000" step="100" name="max-price">
+              <li class="price__item">
+                <label class="price__area">
+                  <span class="price__label">до</span>
+                  <input class="price__input" type="number" placeholder="15 000" min="0" max="15000" step="100" name="max-price">
+                </label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="grid">
+          <fieldset class="form__block">
             <legend class="grid-filter">Сетка</legend>
-            <ul>
+            <ul class="option__list">
               <li>
                 <label class="option">
-                  <input class="option-input" type="radio" value="Адаптивная" checked>
-                  <span class="option-element"></span>
-                  <span class="option-label">Адаптивная</span>
+                  <input class="option__input" type="radio" name="grid-filter-name" value="Адаптивная">
+                  <span class="option__element"></span>
+                  <span class="option__label">Адаптивная</span>
                 </label>
               </li>
               <li>
                 <label class="option">
-                  <input class="option-input" type="radio" value="Фиксированная">
-                  <span class="option-element"></span>
-                  <span class="option-label">Фиксированная</span>
+                  <input class="option__input" type="radio" name="grid-filter-name" value="Фиксированная">
+                  <span class="option__element"></span>
+                  <span class="option__label">Фиксированная</span>
                 </label>
               </li>
               <li>
                 <label class="option">
-                  <input class="option-input" type="radio" value="Резиновая">
-                  <span class="option-element"></span>
-                  <span class="option-label">Резиновая</span>
+                  <input class="option__input" type="radio" name="grid-filter-name" value="Резиновая">
+                  <span class="option__element"></span>
+                  <span class="option__label">Резиновая</span>
                 </label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="features">
+          <fieldset class="form__block">
             <legend class="features-filter">Особенности:</legend>
-            <ul>
+            <ul class="option__list">
               <li>
                 <label class="option">
-                  <input class="option-input" type="checkbox" value="Слайдер" checked>
-                  <span class="option-element"></span>
-                  <span class="option-label">Слайдер</span>
+                  <input class="option__input" type="checkbox" value="Слайдер" checked>
+                  <span class="option__element"></span>
+                  <span class="option__label">Слайдер</span>
                 </label>
               </li>
               <li>
                 <label class="option">
-                  <input class="option-input" type="checkbox" value="Блок преимуществ">
-                  <span class="option-element"></span>
-                  <span class="option-label">Блок преимуществ</span>
+                  <input class="option__input" type="checkbox" value="Блок преимуществ">
+                  <span class="option__element"></span>
+                  <span class="option__label">Блок преимуществ</span>
                 </label>
               </li>
               <li>
                 <label class="option">
-                  <input class="option-input" type="checkbox" value="Новости" checked>
-                  <span class="option-element"></span>
-                  <span class="option-label">Новости</span>
+                  <input class="option__input" type="checkbox" value="Новости" checked>
+                  <span class="option__element"></span>
+                  <span class="option__label">Новости</span>
                 </label>
               </li>
               <li>
                 <label class="option">
-                  <input class="option-input" type="checkbox" value="Галерея">
-                  <span class="option-element"></span>
-                  <span class="option-label">Галерея</span>
+                  <input class="option__input" type="checkbox" value="Галерея">
+                  <span class="option__element"></span>
+                  <span class="option__label">Галерея</span>
                 </label>
               </li>
               <li>
                 <label class="option">
-                  <input class="option-input" type="checkbox" value="Корзина">
-                  <span class="option-element"></span>
-                  <span class="option-label">Корзина</span>
+                  <input class="option__input" type="checkbox" value="Корзина">
+                  <span class="option__element"></span>
+                  <span class="option__label">Корзина</span>
                 </label>
               </li>
             </ul>
           </fieldset>
-          <button class="form-btn btn" type="submit">Показать</button>
+          <button class="form__btn btn" type="submit">Показать</button>
         </form>
         <div class="catalog__main">
           <div class="catalog__sorting sorting">
             <p class="sorting__text">Сортировать</p>
             <ul class="sorting__list">
               <li class="sorting__item">
-                <a href="#price">по цене</a>
+                <a class="sorting__link" href="#price">по цене</a>
               </li>
               <li class="sorting__item">
-                <a href="#type">по типу</a>
+                <a class="sorting__link" href="#type">по типу</a>
               </li>
               <li class="sorting__item">
-                <a href="#name">по названию</a>
+                <a class="sorting__link" href="#name">по названию</a>
               </li>
             </ul>
-            <ul class="sorting-direction">
-              <li>
-                <a href="#down" aria-label="вниз">
-                  <svg width="11" height="10" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M5.5 10L0 0h11" fill="#231F20"/>
-                  </svg>
+            <ul class="sorting__direction direction">
+              <li class="direction__item">
+                <a class="direction__link" href="#down" aria-label="вниз">
+                  <svg width="11" height="10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.5 10L0 0h11" fill="#A6A6A6"/>
+                    </svg>
                 </a>
               </li>
-              <li>
-                <a href="#up" aria-label="вверх">
-                  <svg width="11" height="10" fill="DimGrey" stroke="DimGrey" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M5.5 0L0 10h11L5.5 0z" fill="#A6A6A6" opacity=".2"/>
-                  </svg>
+              <li class="direction__item">
+                <a class="direction__link" href="#up" aria-label="вверх">
+                  <svg width="11" height="10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.5 0L0 10h11L5.5 0z" fill="#A6A6A6"/>
+                    </svg>
                 </a>
               </li>
             </ul>
@@ -225,7 +229,7 @@
                 </div>
               </article>
             </li>
-            <li class="product__item">
+            <li class="catalog__item">
               <article class="product">
                 <a class="product__img" href="#nowhere">
                   <img src="img/catalog/kvast.png" width="358" height="578" alt="сайт кваст">
@@ -249,14 +253,14 @@
               <a class="pagination__link" href="#3">3</a>
             </li>
             <li class="pagination__item">
-              <a class="pagination__link" href="#next">Следующая</a>
+              <a class="pagination__link-next" href="#next">Следующая</a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="page__footer footer">
-      <div class="footer__map">
+      <div class="page__wrapper footer__map">
         <img src="img/map-marker.png" width="1440" height="416" alt="карта">
         <div class="page__wrapper">
           <div class="footer__contacts contacts">
@@ -271,21 +275,21 @@
         <ul class="footer-social social">
           <li class="social__item">
             <a class="social__link" href="#nowhere" aria-label="вконтакте">
-              <svg width="27" height="15" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg">
+              <svg width="27" height="15" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M16.14 11.51c.95-.3 2.18 2.04 3.48 2.94.98.68 1.73.53 1.73.53l3.47-.05s1.82-.1.96-1.55c-.07-.12-.5-1.07-2.59-3.02-2.17-2.05-1.88-1.71.74-5.25 1.6-2.15 2.24-3.46 2.04-4.02-.2-.54-1.37-.4-1.37-.4L20.7.7c-.38 0-.7.12-.85.52 0 0-.62 1.66-1.45 3.08-1.74 2.99-2.43 3.15-2.72 2.96-.66-.43-.5-1.74-.5-2.67 0-2.9.44-4.1-.84-4.41A6.6 6.6 0 0012.5 0c-1.39-.03-2.57 0-3.24.32-.45.23-.79.72-.58.74.26.04.84.16 1.15.59.4.55.4 1.79.4 1.79s.22 3.41-.55 3.83c-.53.3-1.25-.3-2.8-3.01-.8-1.4-1.4-2.92-1.4-2.92s-.1-.29-.32-.45c-.25-.18-.6-.24-.6-.24L.85.68S.29.7.08.95c-.18.21-.01.66-.01.66s2.9 6.89 6.2 10.35c3.02 3.18 6.46 2.97 6.46 2.97h1.55s.47-.05.7-.31c.23-.24.22-.7.22-.7s-.03-2.1.94-2.41z" fill="#fff"/>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link" href="#nowhere" aria-label="фейсбук">
-              <svg width="12" height="22" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg">
+              <svg width="12" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link" href="#nowhere" aria-label="инстаграмм">
-              <svg width="21" height="21" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg">
+              <svg width="21" height="21" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h15a3 3 0 013 3v15a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm11 10.5a3.5 3.5 0 10-7 0 3.5 3.5 0 007 0zM3 18V9h1.18a6.5 6.5 0 1012.64 0H18v9H3zM14 7h4V3h-4v4z" fill="#fff"/>
               </svg>
             </a>
