--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="favicon/180.png">
     <link rel="manifest" href="favicon/manifest.webmanifest">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
+    <h1 class="visually-hidden">Nerds - дизайн студия</h1>
     <header class="page__header header">
       <div class="page__wrapper">
         <nav class="header__nav main-nav">
@@ -35,8 +36,8 @@
           </ul>
         </nav>
         <ul class="header__basket basket">
-          <li class="basket-item">
-            <a class="basket-link" href="#nowhere">Корзина</a>
+          <li class="basket__item">
+            <a class="basket__link" href="#nowhere">Корзина</a>
           </li>
         </ul>
       </div>
@@ -77,7 +78,7 @@
               </div>
             </li>
           </ul>
-          <div class="slider__toggles toogles">
+          <div class="slider__toggles toggles">
             <button class="toggles__item toggles__item_active" type="button" aria-label="слайд 1"></button>
             <button class="toggles__item" type="button" aria-label="слайд 2"></button>
             <button class="toggles__item" type="button" aria-label="слайд 3"></button>
@@ -94,7 +95,7 @@
               </div>
               <h3 class="offer__title">Веб-сайты</h3>
               <p class="offer__description">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-              <a class="offer__btn btn" href="#nowhere">Заказать</a>
+              <a class="offer__btn btn btn__red" href="#nowhere">Заказать</a>
             </li>
             <li class="offers-item offer">
               <div class="offer__img">
@@ -102,7 +103,7 @@
               </div>
               <h3 class="offer__title">Приложения</h3>
               <p class="offer__description">Покорите топ-10 приложений в AppStore и Google Play</p>
-              <a class="offer__btn btn" href="#nowhere">Заказать</a>
+              <a class="offer__btn btn btn__green" href="#nowhere">Заказать</a>
             </li>
             <li class="offers__item offer">
               <div class="offer__img">
@@ -110,7 +111,7 @@
               </div>
               <h3 class="offer__title">Презентации</h3>
               <p class="offer__description">Вы даже не подозреваете, насколько вы изумительны!</p>
-              <a class="offer__btn btn" href="#nowhere">Заказать</a>
+              <a class="offer__btn btn btn__gold" href="#nowhere">Заказать</a>
             </li>
           </ul>
         </section>
@@ -119,7 +120,7 @@
           <div class="about__left">
             <p class="about__slogan"><strong>Мы — маленькая, но гордая дизайн-студия из Краснодара.</strong></p>
             <p class="about__description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-            <p>Выполняем заказы на разработку:</p>
+            <p class="list__description">Выполняем заказы на разработку:</p>
             <ul class="about__skills skills">
               <li class="skills__item">Веб-сайтов любой сложности</li>
               <li class="skills__item">Мобильных приложений для iOS и Android</li>
@@ -131,16 +132,16 @@
               <img src="img/nerds-illustration.png" width="360" height="208" alt="иллюстрация логотип">
             </div>
             <table class="about__table table">
-              <caption class="table-title">с 2004 года Любим точность во всем:</caption>
-              <tr class="table-tr">
-                <td class="table-td">146<sup>%</sup></td>
-                <td class="table-td">100<sup>%</sup></td>
-                <td class="table-td">50<sup>%</sup></td>
+              <caption class="table__title">с 2004 года Любим точность во всем:</caption>
+              <tr class="table__tr">
+                <td class="table__td">146<sup>%</sup></td>
+                <td class="table__td">100<sup>%</sup></td>
+                <td class="table__td">50<sup>%</sup></td>
               </tr>
-              <tr class="table-tr">
-                <th class="table-th">Уровень самоотдачи</th>
-                <th class="table-th">Соблюдение сроков</th>
-                <th class="table-th">Минимальная предоплата</th>
+              <tr class="table__tr">
+                <th class="table__th">Уровень самоотдачи</th>
+                <th class="table__th">Соблюдение сроков</th>
+                <th class="table__th">Минимальная предоплата</th>
               </tr>
             </table>
           </div>
@@ -173,11 +174,11 @@
       </div>
     </main>
     <footer class="page__footer footer">
-      <div class="footer__map">
+      <div class="page__wrapper footer__map">
         <img src="img/map-marker.png" width="1440" height="416" alt="карта">
         <div class="page__wrapper">
           <div class="footer__contacts contacts">
-            <p class="contacts__title">Nerds design studio</p>
+            <p class="contacts__title">Nёrds design studio</p>
             <p class="contacts__address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
             <a class="contacts__btn btn" href="#nowhere">Напишите нам</a>
@@ -188,21 +189,21 @@
         <ul class="footer-social social">
           <li class="social__item">
             <a class="social__link" href="#nowhere" aria-label="вконтакте">
-              <svg width="27" height="15" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg">
+              <svg width="27" height="15" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M16.14 11.51c.95-.3 2.18 2.04 3.48 2.94.98.68 1.73.53 1.73.53l3.47-.05s1.82-.1.96-1.55c-.07-.12-.5-1.07-2.59-3.02-2.17-2.05-1.88-1.71.74-5.25 1.6-2.15 2.24-3.46 2.04-4.02-.2-.54-1.37-.4-1.37-.4L20.7.7c-.38 0-.7.12-.85.52 0 0-.62 1.66-1.45 3.08-1.74 2.99-2.43 3.15-2.72 2.96-.66-.43-.5-1.74-.5-2.67 0-2.9.44-4.1-.84-4.41A6.6 6.6 0 0012.5 0c-1.39-.03-2.57 0-3.24.32-.45.23-.79.72-.58.74.26.04.84.16 1.15.59.4.55.4 1.79.4 1.79s.22 3.41-.55 3.83c-.53.3-1.25-.3-2.8-3.01-.8-1.4-1.4-2.92-1.4-2.92s-.1-.29-.32-.45c-.25-.18-.6-.24-.6-.24L.85.68S.29.7.08.95c-.18.21-.01.66-.01.66s2.9 6.89 6.2 10.35c3.02 3.18 6.46 2.97 6.46 2.97h1.55s.47-.05.7-.31c.23-.24.22-.7.22-.7s-.03-2.1.94-2.41z" fill="#fff"/>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link" href="#nowhere" aria-label="фейсбук">
-              <svg width="12" height="22" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg">
+              <svg width="12" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link" href="#nowhere" aria-label="инстаграмм">
-              <svg width="21" height="21" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg">
+              <svg width="21" height="21" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h15a3 3 0 013 3v15a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm11 10.5a3.5 3.5 0 10-7 0 3.5 3.5 0 007 0zM3 18V9h1.18a6.5 6.5 0 1012.64 0H18v9H3zM14 7h4V3h-4v4z" fill="#fff"/>
               </svg>
             </a>
